# ChangeLog for media-sound/pympd
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/pympd/ChangeLog,v 1.15 2007/05/26 13:40:07 drac Exp $

  26 May 2007; Samuli Suominen <drac@gentoo.org> pympd-0.07.ebuild:
  inherit eutils for built_with_use.

  11 Feb 2007; Andrej Kacian <ticho@gentoo.org> pympd-0.06.ebuild,
  pympd-0.06.1.ebuild, pympd-0.07.ebuild:
  Add x11-themes/gnome-icon-theme to RDEPEND to fix broken icons. Bug #166092,
  reported by Roy <yvan.royon at gmail.com>.

  01 Jan 2007; Sven Wegener <swegener@gentoo.org> pympd-0.06.ebuild,
  pympd-0.07.ebuild:
  Use full atoms for built_with_use.

  04 Dec 2006; <ticho@gentoo.org> pympd-0.06.ebuild, pympd-0.07.ebuild:
  Warn user if GTK+ was built without jpeg USE flag. Warning suggested by
  Avuton Olrich <avuton at gmail.com>.

  09 Sep 2006; <nixnut@gentoo.org> pympd-0.07.ebuild:
  Added ~ppc

*pympd-0.07 (22 Jul 2006)

  22 Jul 2006; Andrej Kacian <ticho@gentoo.org> +pympd-0.07.ebuild:
  Version bump. Use ebuild from bug #139710, submitted by Samuli Suominen
  <sasuomin at uusikaupunki.fi>.

*pympd-0.06.1 (22 Mar 2006)

  22 Mar 2006; <ticho@gentoo.org> +pympd-0.06.1.ebuild:
  Version bump.

  18 Mar 2006; <ticho@gentoo.org> -pympd-0.05.ebuild, -pympd-0.05.2.ebuild,
  pympd-0.06.ebuild:
  0.06 stable on x86. Pruned obsolete ebuilds.

  18 Feb 2006; Andrej Kacian <ticho@gentoo.org> pympd-0.06.ebuild:
  Fixed the build procedure, so we don't need to sed the Makefile. Added a
  warning about removing ~/.pympd. Thanks go to Natan 'whatah' Zohar.

*pympd-0.06 (18 Feb 2006)

  18 Feb 2006; Andrej Kacian <ticho@gentoo.org> +pympd-0.06.ebuild:
  Version bump. Bug #122799, reported by Anton Romanov <theli at ukr.net>.

  19 Nov 2005; Luis Medinas <metalgod@gentoo.org> pympd-0.05.2.ebuild:
  Added ~amd64 keyword. Closes bug #112877.

*pympd-0.05.2 (18 Nov 2005)

  18 Nov 2005; Andrej Kacian <ticho@gentoo.org> -pympd-0.04.ebuild,
  +pympd-0.05.2.ebuild: