@@ -1,0 +1,3 @@
+MD5 388c2882ffbacffb27b491441a2b2a23 pympd-0.08.1.tar.gz 101120
+RMD160 96bc3c5ce39991ebed389241f372ace5e5bf61fa pympd-0.08.1.tar.gz 101120
+SHA256 8da3b91c06857c486321a1d2769c035becd90286ce03791aa2058b0a5f620a06 pympd-0.08.1.tar.gz 101120
